Fixed problem of pdf on mobile

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .nameLandingLeft h1 {
   font-family: "Playfair Display", serif;
   text-align: center;
-  font-size: 7vh;
+  font-size: 6.5vh;
   letter-spacing: 7px;
   margin: 0px;
   padding-bottom: 1%;
